# cto-assets-rtis

./: Build-Project.ps1  CMakeLists.txt  LICENSE.md  PortDependencies.json  README.md
.github/workflows/: build-project-artifact.yml
assets/: RubiksCube.blend  RubiksCube.mtl
cmake/: BatchStringifyFiles.cmake  CompileAssets.cmake  GenerateHeaders.cmake  MakeNamedTuple.cmake  ParseAndValidateArguments.cmake  index.html.in
common/include/: AutomaticDurationString.h
common/tools/include/: ArgumentBuffers.h
include/: Camera.h  Deserialize.h  FixedRateTimer.h  GLObject.h  InputStates.h  InputSystem.h  MaterialLibrary.h  Mesh.h  MeshData.h  Model.h  ProjectionMatrixManager.h  Renderer.h  Shader.h  SimulationObject.h  Vertex.h  ViewportDimensions.h  WindowSystem.h
include/Application/: ApplicationStateManager.h
include/Graphics/Camera/: Camera.h
include/Graphics/Model/: Model.h
include/Graphics/Model/Materials/: MaterialLibrary.h
include/Graphics/Model/Mesh/: Mesh.h  MeshData.h  Vertex.h
include/Graphics/Rendering/: GLObject.h  ProjectionMatrixManager.h  Renderer.h
include/Input/: InputStates.h  InputSystem.h
include/Serialization/: Deserialize.h  ParseStructuredSequentialData.h
include/Simulation/: FixedRateTimer.h  Rotation.h  SimulationObject.h  Transform.h
include/Window/: ViewportDimensions.h  WindowSystem.h
src/: CMakeLists.txt  main.cpp
src/shaders/: FragmentShader.glsl
tools/: CMakeLists.txt
tools/batch-stringify-files/: BatchStringifyFiles.cpp  CMakeLists.txt
tools/compile-asset-library/: CMakeLists.txt
tools/generate-asset-data/: CMakeLists.txt  GenerateAssetData.cpp
tools/generate-asset-data/include/converters/: AssimpSTLConverters.h
tools/generate-asset-data/include/data-types/: CTOMaterialLibrary.h  CTOMesh.h
tools/generate-asset-data/include/factories/: MakeCTOMaterialLibrary.h  MakeCTOMeshes.h
tools/generate-asset-data/include/formatting/: FormatCTOMaterialLibrary.h  FormatCTOMesh.h  FormatCTONormalMap.h  FormatContainer.h
tools/generate-asset-data/include/utilities/: GetMaterialProperty.h
